--- a/phone_verification/pubspec.yaml
+++ b/phone_verification/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   firebase_auth:
   firebase_core: "0.5.0"
   google_sign_in: ^4.0.2
+  # flutter_facebook_login: ^1.2.0
+  # http: ^0.12.0+2
 
 
   # The following adds the Cupertino Icons font to your application.
