--- a/phone_verification/pubspec.yaml
+++ b/phone_verification/pubspec.yaml
@@ -23,10 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_auth:
+  firebase_auth: 
   firebase_core: "0.5.0"
-  google_sign_in: ^4.0.2
-  # flutter_facebook_login: ^1.2.0
+  # google_sign_in: ^4.5.3
+  google_sign_in: ^4.1.1
+  # flutter_facebook_login: 
   # http: ^0.12.0+2
 
 
